--- a/package.json
+++ b/package.json
@@ -17,11 +17,22 @@
   },
   "homepage": "https://github.com/Arkanic/filecan#readme",
   "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "clean-webpack-plugin": "^3.0.0",
     "cors": "^2.8.5",
+    "css-loader": "^5.0.1",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.3",
     "multer": "^1.4.2",
-    "nanoid": "^3.1.20"
+    "nanoid": "^3.1.20",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0"
   }
 }
