--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^1.4.2",
     "nanoid": "^3.1.20",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "path-complete-extname": "^1.0.0",
     "terser-webpack-plugin": "^5.0.3",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
