--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js --progress",
-    "start": "node index.js",
-    "quick": "npm run build && npm run start"
+    "dist": "webpack --config webpack.config.js --progress",
+    "build": "tsc",
+    "fullbuild": "npm run dist && npm run build",
+    "start": "node ./build/index.js",
+    "quick": "npm run fullbuild && npm run start"
   },
   "repository": {
     "type": "git",
@@ -22,16 +24,21 @@
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.15",
+    "@types/multer": "^1.4.7",
     "babel-loader": "^8.2.2",
     "bcrypt": "^5.0.0",
+    "better-sqlite3": "^8.0.1",
     "body-parser": "^1.19.0",
     "clean-webpack-plugin": "^3.0.0",
     "cors": "^2.8.5",
     "css-loader": "^5.0.1",
     "express": "^4.17.1",
     "html-webpack-plugin": "^4.5.0",
+    "knex": "^2.4.1",
     "mini-css-extract-plugin": "^1.3.3",
-    "multer": "^1.4.2",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^3.1.20",
     "path-complete-extname": "^1.0.0",
     "terser-webpack-plugin": "^5.0.3",
