--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nanoid": "^3.1.20",
     "path-complete-extname": "^1.0.0",
     "terser-webpack-plugin": "^5.0.3",
+    "typescript": "^5.0.4",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.2.0"
   }
