--- a/package.json
+++ b/package.json
@@ -21,31 +21,31 @@
     "url": "https://github.com/Arkanic/filecan/issues"
   },
   "homepage": "https://github.com/Arkanic/filecan#readme",
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11"
+  },
   "dependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.15",
-    "@types/multer": "^1.4.7",
-    "babel-loader": "^8.2.2",
-    "bcrypt": "^5.0.0",
-    "better-sqlite3": "^8.0.1",
-    "body-parser": "^1.19.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
+    "babel-loader": "^9.1.3",
+    "bcrypt": "^5.1.1",
+    "better-sqlite3": "^11.1.2",
+    "body-parser": "^1.20.2",
+    "clean-webpack-plugin": "^4.0.0",
     "cors": "^2.8.5",
-    "css-loader": "^5.0.1",
-    "express": "^4.17.1",
-    "html-webpack-plugin": "^4.5.0",
-    "knex": "^2.4.1",
-    "mini-css-extract-plugin": "^1.3.3",
+    "css-loader": "^7.1.2",
+    "express": "^4.19.2",
+    "generate-unique-id": "^2.0.3",
+    "html-webpack-plugin": "^5.6.0",
+    "knex": "^3.1.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.1.20",
     "path-complete-extname": "^1.0.0",
-    "pg": "^8.10.0",
-    "pg-native": "^3.0.1",
-    "terser-webpack-plugin": "^5.0.3",
-    "typescript": "^5.0.4",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.2.0"
+    "terser-webpack-plugin": "^5.3.10",
+    "typescript": "^5.5.3",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
