--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "^5.5.3",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "yaml": "^2.6.1"
   }
 }
