--- a/package.json
+++ b/package.json
@@ -24,29 +24,29 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.11"
-  },
-  "dependencies": {
+    "@types/multer": "^1.4.11",
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.26.0",
     "babel-loader": "^9.1.3",
-    "bcrypt": "^5.1.1",
-    "better-sqlite3": "^11.1.2",
-    "body-parser": "^1.20.3",
     "clean-webpack-plugin": "^4.0.0",
-    "cors": "^2.8.5",
     "css-loader": "^7.1.2",
-    "express": "^4.21.1",
-    "generate-unique-id": "^2.0.3",
     "html-webpack-plugin": "^5.6.0",
-    "knex": "^3.1.0",
     "mini-css-extract-plugin": "^2.9.0",
-    "multer": "^1.4.5-lts.1",
-    "path-complete-extname": "^1.0.0",
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "^5.5.3",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "better-sqlite3": "^11.1.2",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "generate-unique-id": "^2.0.3",
+    "knex": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
+    "path-complete-extname": "^1.0.0",
     "yaml": "^2.6.1"
   }
 }
