--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "resolveJsonModule": true,
         "sourceMap": false,
         "outDir": "./build",
-        "strict": true,
+        "strict": false,
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
