--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Build package
         run: ./ci/createpackage.sh
       - name: Upload Artifact
-        uses: actions/upload-artifact@v4.4.3
+        uses: Roang-zero1/github-upload-release-artifacts-action@v2
         with:
-          path: ./ciout/filecan.zip
+          args: "./ciout/filecan.zip"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
